@@ -303,6 +303,26 @@ name|Util
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
 begin_class
 specifier|public
 class|class
@@ -312,6 +332,21 @@ name|JPanel
 implements|implements
 name|DocumentListener
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|logger
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|EjbqlQueryScriptsTab
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 specifier|protected
 name|ProjectController
 name|mediator
@@ -353,92 +388,17 @@ name|void
 name|displayScript
 parameter_list|()
 block|{
-name|EJBQLQueryDescriptor
-name|query
-init|=
-name|getQuery
-argument_list|()
-decl_stmt|;
-name|Document
-name|document
-init|=
 name|scriptArea
 operator|.
-name|getDocument
-argument_list|()
-decl_stmt|;
-empty_stmt|;
-name|String
-name|text
-init|=
-name|query
-operator|.
-name|getEjbql
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-if|if
-condition|(
-operator|!
-name|document
-operator|.
-name|getText
+name|setDocumentTextDirect
 argument_list|(
-literal|0
-argument_list|,
-name|document
-operator|.
-name|getLength
+name|getQuery
 argument_list|()
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-name|query
 operator|.
 name|getEjbql
 argument_list|()
 argument_list|)
-condition|)
-block|{
-name|document
-operator|.
-name|remove
-argument_list|(
-literal|0
-argument_list|,
-name|document
-operator|.
-name|getLength
-argument_list|()
-argument_list|)
 expr_stmt|;
-name|document
-operator|.
-name|insertString
-argument_list|(
-literal|0
-argument_list|,
-name|text
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|BadLocationException
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
 name|updateDisabled
 operator|=
 literal|false
@@ -548,7 +508,7 @@ name|setEjbql
 argument_list|(
 name|scriptArea
 operator|.
-name|getText
+name|getDocumentTextDirect
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -560,13 +520,17 @@ block|}
 catch|catch
 parameter_list|(
 name|BadLocationException
-name|e1
+name|ex
 parameter_list|)
 block|{
-name|e1
+name|logger
 operator|.
-name|printStackTrace
-argument_list|()
+name|warn
+argument_list|(
+literal|"Error reading document"
+argument_list|,
+name|ex
+argument_list|)
 expr_stmt|;
 block|}
 block|}
@@ -578,50 +542,17 @@ name|DocumentEvent
 name|e
 parameter_list|)
 block|{
-try|try
-block|{
-name|String
-name|text
-init|=
-name|scriptArea
-operator|.
-name|getDocument
-argument_list|()
-operator|.
-name|getText
-argument_list|(
-literal|0
-argument_list|,
-name|scriptArea
-operator|.
-name|getDocument
-argument_list|()
-operator|.
-name|getLength
-argument_list|()
-argument_list|)
-decl_stmt|;
 name|getQuery
 argument_list|()
 operator|.
 name|setEjbql
 argument_list|(
-name|text
+name|scriptArea
+operator|.
+name|getDocumentTextDirect
+argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|BadLocationException
-name|e1
-parameter_list|)
-block|{
-name|e1
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
 name|validateEJBQL
 argument_list|()
 expr_stmt|;
@@ -1046,13 +977,17 @@ block|}
 catch|catch
 parameter_list|(
 name|BadLocationException
-name|e1
+name|ex
 parameter_list|)
 block|{
-name|e1
+name|logger
 operator|.
-name|printStackTrace
-argument_list|()
+name|warn
+argument_list|(
+literal|"Error reading document"
+argument_list|,
+name|ex
+argument_list|)
 expr_stmt|;
 block|}
 block|}
