@@ -203,6 +203,26 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
+begin_import
+import|import
 name|javax
 operator|.
 name|swing
@@ -432,16 +452,37 @@ name|DEFAULT_LABEL
 init|=
 literal|"Default"
 decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|logger
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|SQLTemplateScriptsTab
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 specifier|protected
 name|ProjectController
 name|mediator
 decl_stmt|;
 specifier|protected
 name|JList
+argument_list|<
+name|String
+argument_list|>
 name|scripts
 decl_stmt|;
 specifier|protected
 name|List
+argument_list|<
+name|String
+argument_list|>
 name|keys
 decl_stmt|;
 specifier|protected
@@ -524,6 +565,7 @@ name|scripts
 operator|=
 operator|new
 name|JList
+argument_list|<>
 argument_list|()
 expr_stmt|;
 name|scripts
@@ -553,6 +595,7 @@ name|keys
 operator|=
 operator|new
 name|ArrayList
+argument_list|<>
 argument_list|(
 name|DbAdapterInfo
 operator|.
@@ -601,11 +644,18 @@ name|setModel
 argument_list|(
 operator|new
 name|DefaultComboBoxModel
+argument_list|<>
 argument_list|(
 name|keys
 operator|.
 name|toArray
-argument_list|()
+argument_list|(
+operator|new
+name|String
+index|[
+literal|0
+index|]
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -940,9 +990,6 @@ block|}
 name|String
 name|key
 init|=
-operator|(
-name|String
-operator|)
 name|scripts
 operator|.
 name|getSelectedValue
@@ -960,7 +1007,7 @@ block|}
 name|boolean
 name|exist
 init|=
-literal|true
+literal|false
 decl_stmt|;
 for|for
 control|(
@@ -988,13 +1035,6 @@ operator|=
 literal|true
 expr_stmt|;
 break|break;
-block|}
-else|else
-block|{
-name|exist
-operator|=
-literal|false
-expr_stmt|;
 block|}
 block|}
 if|if
@@ -1115,74 +1155,13 @@ argument_list|()
 argument_list|)
 condition|)
 block|{
-name|Document
-name|document
-init|=
 name|textPane
 operator|.
-name|getDocument
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-if|if
-condition|(
-operator|!
-name|document
-operator|.
-name|getText
-argument_list|(
-literal|0
-argument_list|,
-name|document
-operator|.
-name|getLength
-argument_list|()
-argument_list|)
-operator|.
-name|equals
+name|setDocumentTextDirect
 argument_list|(
 name|text
 argument_list|)
-condition|)
-block|{
-name|document
-operator|.
-name|remove
-argument_list|(
-literal|0
-argument_list|,
-name|document
-operator|.
-name|getLength
-argument_list|()
-argument_list|)
 expr_stmt|;
-name|document
-operator|.
-name|insertString
-argument_list|(
-literal|0
-argument_list|,
-name|text
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|BadLocationException
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
 name|textPane
 operator|.
 name|getPane
@@ -1239,31 +1218,15 @@ name|String
 name|key
 parameter_list|)
 block|{
-name|Document
-name|doc
-init|=
-name|e
-operator|.
-name|getDocument
-argument_list|()
-decl_stmt|;
-try|try
+if|if
+condition|(
+name|key
+operator|==
+literal|null
+condition|)
 block|{
-name|String
-name|text
-init|=
-name|doc
-operator|.
-name|getText
-argument_list|(
-literal|0
-argument_list|,
-name|doc
-operator|.
-name|getLength
-argument_list|()
-argument_list|)
-decl_stmt|;
+return|return;
+block|}
 name|SQLTemplateDescriptor
 name|query
 init|=
@@ -1279,14 +1242,51 @@ condition|)
 block|{
 return|return;
 block|}
-if|if
-condition|(
-name|key
-operator|==
+name|Document
+name|doc
+init|=
+name|e
+operator|.
+name|getDocument
+argument_list|()
+decl_stmt|;
+name|String
+name|text
+init|=
 literal|null
-condition|)
+decl_stmt|;
+try|try
 block|{
-return|return;
+name|text
+operator|=
+name|doc
+operator|.
+name|getText
+argument_list|(
+literal|0
+argument_list|,
+name|doc
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|BadLocationException
+name|ex
+parameter_list|)
+block|{
+name|logger
+operator|.
+name|warn
+argument_list|(
+literal|"Error reading document"
+argument_list|,
+name|ex
+argument_list|)
+expr_stmt|;
 block|}
 if|if
 condition|(
@@ -1417,19 +1417,6 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|BadLocationException
-name|e1
-parameter_list|)
-block|{
-name|e1
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
 block|}
 block|}
 specifier|final
