@@ -1701,6 +1701,132 @@ name|getDocument
 argument_list|()
 return|;
 block|}
+specifier|public
+name|void
+name|setDocumentTextDirect
+parameter_list|(
+name|String
+name|text
+parameter_list|)
+block|{
+name|Document
+name|document
+init|=
+name|getDocument
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+if|if
+condition|(
+operator|!
+name|document
+operator|.
+name|getText
+argument_list|(
+literal|0
+argument_list|,
+name|document
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|text
+argument_list|)
+condition|)
+block|{
+name|document
+operator|.
+name|remove
+argument_list|(
+literal|0
+argument_list|,
+name|document
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|document
+operator|.
+name|insertString
+argument_list|(
+literal|0
+argument_list|,
+name|text
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|BadLocationException
+name|ex
+parameter_list|)
+block|{
+name|logObj
+operator|.
+name|warn
+argument_list|(
+literal|"Error reading document"
+argument_list|,
+name|ex
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|String
+name|getDocumentTextDirect
+parameter_list|()
+block|{
+name|Document
+name|document
+init|=
+name|getDocument
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+return|return
+name|document
+operator|.
+name|getText
+argument_list|(
+literal|0
+argument_list|,
+name|document
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|BadLocationException
+name|ex
+parameter_list|)
+block|{
+name|logObj
+operator|.
+name|warn
+argument_list|(
+literal|"Error reading document"
+argument_list|,
+name|ex
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
+block|}
 class|class
 name|JTextPaneScrollable
 extends|extends
