@@ -17,6 +17,9 @@ CAY-2329 Update project dependencies
 
 Bug Fixes:
 
+CAY-2318 Modeler: Query. Exception after Undo clicking
+CAY-2319 Modeler: Embeddable > Attributes. Undo does not cancel pasted objects
+CAY-2323 Modeler: Graph. No warning while saving the image with existing name
 
 
 ----------------------------------
